# com.unity.live-capture

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  Third Party Notices.md  package.json
Cameras/Editor/: AssemblyInfo.cs  CameraTrackingDeviceEditor.cs  (+2 more)
Documentation~/: TableOfContents.md  capture-device-setup-actor.md  capture-device-setup-create-device.md  capture-device-setup.md  connecting.md  connection-device.md  connection-network.md  connection.md  data-capture-process.md  face-capture-app-controls.md  face-capture-app-ui-settings.md  face-capture-app-ui.md  face-capture-components.md  face-capture-editor-settings.md  face-capture-features.md  face-capture-getting-started.md  face-capture-mapping-evaluator.md  face-capture-presets.md  face-capture-recommendations.md  face-capture-record-takes.md  face-capture.md  features.md  film-format.md  filter.yml  focus-plane.md  genlock.md  getting-started.md  index.md  installation.md  installing-app.md  known-issues-limitations.md  limitations.md  live-capture-face-app.md  live-capture-face-requirements.md  network-setup.md  ref-asset-aspect-ratio-presets.md  ref-asset-lens-kit.md  ref-asset-sensor-presets.md  ref-asset-shot-library.md  ref-component-arkit-default-face-mapper.md  (+71 more)
EditorBridge/: AssemblyInfo.cs  EditorGUIUtilityInternal.cs  Unity.InternalAPIEditorBridge.011.asmdef
GPUFrameSync/Native~/GPUFrameSyncNvAPID3D12/: CMakeLists.txt  GPUFrameSync.cpp  GPUFrameSync.h  GPUFrameSyncEvents.cpp  GPUFrameSyncEvents.h
Networking/: AssemblyInfo.cs  ChannelType.cs  DisconnectStatus.cs  Message.cs  Remote.cs  Unity.LiveCapture.Networking.api  Unity.LiveCapture.Networking.asmdef
RuntimeBridge/: AssemblyInfo.cs  DrivenPropertyManagerInternal.cs  PlayableDirectorInternal.cs  Unity.InternalAPIEngineBridge.011.asmdef
VideoStreamingServer/: CHANGELOG.md  README.md
(+863 files in other folders)
