cmake_minimum_required(VERSION 3.14.0 FATAL_ERROR)

set(PROJECT_NAME "GPUFrameSyncNvAPID3D12")
PROJECT(${PROJECT_NAME})
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "/DWIN32 /D_WINDOWS /GR /EHsc")
message("CXX flags: ${CMAKE_CXX_FLAGS}")

# base files
set( GPU_FRAME_SYNC_WRAPPER_PUBLIC_HEADERS
	$ENV{NVAPI_SDK}/nvapi.h
	$ENV{NVAPI_SDK}/nvapi_lite_common.h
	$ENV{NVAPI_SDK}/nvapi_lite_d3dext.h
	$ENV{NVAPI_SDK}/nvapi_lite_salend.h
	$ENV{NVAPI_SDK}/nvapi_lite_salstart.h
	$ENV{NVAPI_SDK}/nvapi_lite_sli.h
	$ENV{NVAPI_SDK}/nvapi_lite_stereo.h
	$ENV{NVAPI_SDK}/nvapi_lite_surround.h
	$ENV{NVAPI_SDK}/NvApiDriverSettings.h
	$ENV{NVAPI_SDK}/nvHLSLExtns.h
	$ENV{NVAPI_SDK}/nvHLSLExtnsInternal.h
	$ENV{NVAPI_SDK}/nvShaderExtnEnums.h
)

set( GPU_FRAME_SYNC_WRAPPER_PROJECT_HEADERS
	GPUFrameSync.h
	GPUFrameSyncEvents.h
)

set( GPU_FRAME_SYNC_WRAPPER_PRIVATE_HEADERS
)

set( GPU_FRAME_SYNC_WRAPPER_SOURCES
	GPUFrameSync.cpp
	GPUFrameSyncEvents.cpp
)

INCLUDE_DIRECTORIES(
   Unity
   $ENV{NVAPI_SDK}/
	include
)

add_library( ${PROJECT_NAME} SHARED
${GPU_FRAME_SYNC_WRAPPER_SOURCES}
${GPU_FRAME_SYNC_WRAPPER_PUBLIC_HEADERS}
${GPU_FRAME_SYNC_WRAPPER_PROJECT_HEADERS}
${GPU_FRAME_SYNC_WRAPPER_PRIVATE_HEADERS}
${GPU_FRAME_SYNC_WRAPPER_RESOURCES}
)

# Remove 'lib' prefix
SET_TARGET_PROPERTIES( ${PROJECT_NAME} PROPERTIES
   PREFIX ""
)

# Link libraries
set( GPU_FRAME_SYNC_WRAPPER_STATIC_DEPENDENCIES
)

set( GPU_FRAME_SYNC_WRAPPER_DEPENDENCIES
	"nvapi64"
)

target_link_directories(${PROJECT_NAME} PUBLIC
	"$ENV{NVAPI_SDK}/amd64"
)

target_link_libraries( ${PROJECT_NAME}
${GPU_FRAME_SYNC_WRAPPER_STATIC_DEPENDENCIES}
${GPU_FRAME_SYNC_WRAPPER_DEPENDENCIES}
)

# Install
install( TARGETS ${PROJECT_NAME} DESTINATION .)